-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
5.0.2
-
None
Under certain circumstances, setting contentX on Flickable is ignored.
as described under:
https://qt-project.org/forums/viewthread/26761/
For Gerrit Dashboard: QTBUG-30837 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
54888,2 | Don't fix up x/y while initializing | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |
55802,1 | Changelog entry for not-quite-so-important behavior change | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |