Don't fix up x/y while initializing

Any initial values leading to content outside the Flickable are likely
to be explicitly set as initial property values. "fixing" them up will
lead to just ignoring them.

Task-number: QTBUG-30837
Change-Id: I3b2593605f16d73ba008bc6a6f067ab6020bcbe4
Reviewed-by: Andrew den Exter <andrew.den.exter@qinetic.com.au>